--- a/level1/01.区块链技术概览及加密技术作业题.md
+++ b/level1/01.区块链技术概览及加密技术作业题.md
@@ -1,93 +1,129 @@
 ### 区块链的狭义定义是什么？
 
+去中戏化分布式账本，交易放在区块中，通过共识成为链
 
 
 ### 区块链在广义上包含哪些技术组件？
 
+钱包 密码学 p2p网络节点 块链数据结构  共识节点 智能合约  
 
 
 ### 区块链技术最初和最著名的应用是什么？
 
+比特币  
 
 
 ### 公链（Public Blockchain）和联盟链（Consortium Blockchain）有什么区别？
 
+公有链 是完全去中心化区块链 任何节点都是平等的  
+联盟链许可才能进入 部分去中心化，节点少于公有链
 
 
 ### 区块链技术的核心区别在于什么？
 
+共识 p2p网络  分布式账本
 
 
 ### 智能合约是什么？
+
+在区块链上可编程，可自动执行的程序
 
 
 
 ### 区块链 2.0 与 1.0 的主要区别是什么？
 
+区块链1.0 虚拟币交易 解决了双花 拜占庭将军问题
+区块链2.0 引入智能合约  开发dApp应用
 
 
 ### 比特币和以太坊的共同点和区别是什么？
 
+比特币以太坊共性  公有链  pow  以太坊后改为pos
+区别  以太坊支持智能合约  layer2   可以开发dapp
 
 
 ### 区块链技术的发展历程中的几个关键点是什么？
+
+1982 拜占庭将军问题   1985 椭圆曲线密码学   1991 时间戳技术  2008年中本聪比特币论文
+
 
 
 
 ### 区块链技术如何确保数据安全？
 
+使用非对称加密 共识 在网络中多个节点安全存储 验证 同步数据，篡改数据需要影响51%共识节点 才能对系统造成影响
+从而确保数据安全性 
 
 
 ### **对称密码算法的主要特点是什么？**
+
+加密后的数据可逆，加密和解密使用相同密钥
 
 
 
 ### **请列举两种对称加密算法的类型，并分别给出一个例子。**
 
+流密码 分组密码    
+流密码是RC4   分组密码AES
+
+
 
 
 ### **什么是 DES，为什么它被认为不再安全？**
+
+DES 早期分组密码算法，56位长度过短 容易被破解
 
 
 
 ### **AES 算法的密钥长度有哪些选择？**
 
-
+AES  128  192  256位
 
 ### **分组密码在区块链技术中的应用主要体现在哪些方面？**
 
-
+数字钱包私钥管理 区块链网络层通信安全
 
 ### **非对称密码算法与对称密码算法相比有哪些优点？**
 
-
+非对称加密更安全  加密不可逆 
 
 ### **RSA 算法的安全性基于什么数学问题？**
+
+RSA 算法安全性基于大质数分解问题
 
 
 ### **什么是零知识证明，它有哪些主要特性？**
 
-
+一种加密协议，证明者向验证者证明自己拥有某个信息而不泄漏该信息本身 特点包括完备性 可靠性 零知识性
 
 ### **在区块链中，Merkle 树是如何提高数据完整性验证的效率的？**
 
-
+树状  从一叶子节点到根节点哈希链   独立验证数据  无需验证整个数据集
 
 ### **数字签名技术的基本工作原理是什么？**
 
+私钥对数据签名，公钥来验证签名有效性，以此来确定数据完整性和来源可靠性
 
 
 ### **什么是 PKI，它包括哪些主要组成部分？**
 
+PKI公钥基础设施 ，是一种支持公钥加密和数字证书管理的框架。它包括硬件、软件、人员、政策和程序，用于密钥和数字证书的生成、管理、存储、分发和撤销等功能。
+  
+
 
 ### **CA 在 PKI 中扮演什么角色？**
 
+证书颁发机构（CA）是 PKI 中的核心组成部分，负责颁发、管理和吊销数字证书，以及维护证书吊销列表（CRL）。
 
 
 ### **区块链技术如何使用非对称密码算法进行身份验证？**
 
+ 区块链技术通过使用非对称密码算法生成的密钥对（公钥和私钥）来进行身份验证。公钥用于加密信息，私钥用于解密，确保只有密钥持有者可以访问特定的信息或执行特定的操作。
 
 
 ### **Base58 编码方案与 Base64 有何不同，它为何适合于区块链地址编码？**
+
+Base58 编码方案去除了易混淆的字符，如数字 0、大写 O 等，使得编码结果更易于人工阅读和手工输入。这使得 Base58 特别适合用于区块链地址和私钥的编码，因为这些场景中编码的可读性非常重要。
+
 
 
